# cgal-plane-detector

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yaml
cgal-plane-detection/: CMakeLists.txt
cgal-plane-detection/include/: cgal.h  intersections.h  objreader.h  planefit.h  polygons_helper.h  processing.h  regiongrow.h  savemesh.h  saveplanes.h  stdafx.h  vtk_vis.h
cgal-plane-detection/src/: intersections.cpp  main.cpp  objreader.cpp  planefit.cpp  polygon_helper.cpp  processing.cpp  regiongrow.cpp  savemesh.cpp  saveplanes.cpp  vtk_vis.cpp
